Sat Apr  3 13:30:02 EST 2004	JK Lowden <jklowden@schemamania.org>
	* doc/htdoc/docs.html added links to other documentation
	
Thu Apr 01 20:46:47 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* TODO: update
	* include/sybdb.h: fix for PHP

Thu Apr 01 20:29:01 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* src/dblib/dblib.c:
	- applied Bill Thompson patch on DONE handling

Wed Mar 31 20:51:38 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h src/tds/convert.c src/tds/numeric.c:
	* src/tds/token.c:
	- workaround for ASA 7 and nullable integer
	* src/odbc/unittests/error.c: fix for Sybase

Tue Mar 30 17:24:24 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/unittests/Makefile.am src/odbc/unittests/error.c(added):
	- add error for error in a row

Sun Mar 28 20:44:52 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc.c src/odbc/unittests/tables.c:
	- fix small issue with DBD::ODBC

Thu Mar 25 14:10:44 EST 2004	JK Lowden <jklowden@schemamania.org>
	* src/dblib/rpc.c src/dblib/unittests/rpc.c
	- fix rpc variable-length output parameter handling.

Thu Mar 25 11:00:20 EST 2004	JK Lowden <jklowden@schemamania.org>
	* src/dblib/dblib.c src/dblib/unittests/rpc.c
	- fetch return status & output parameters from stream
	- when client requests the data, instead of waiting for 
	- end-of-results.  

Thu Mar 25 00:37:43 EST 2004	JK Lowden <jklowden@schemamania.org>
	* src/tds/mem.c src/tds/token.c
	- additional logging to trace rpc

Wed Mar 24 23:58:52 EST 2004	JK Lowden <jklowden@schemamania.org>
	* src/dblib/unittests/rpc.c
	- more generalized processing, to allow more complex tests.
	- dbnumrets() fails if stored procedure returns multiple result sets. 

Wed Mar 24 17:30:30 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/native.c src/odbc/odbc.c src/odbc/prepare_query.h:
	- applied patch from Nick Stoughton for scalar functions (modified)
