@@ -1,6 +1,10 @@
+Sun Apr 04 17:55:32 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
+	* TODO src/dblib/dbutil.c:
+	- consistency check for headers
+
 Sat Apr  3 13:30:02 EST 2004	JK Lowden <jklowden@schemamania.org>
 	* doc/htdoc/docs.html added links to other documentation
-	
+
 Thu Apr 01 20:46:47 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
 	* TODO: update
 	* include/sybdb.h: fix for PHP
